Enable preview in docker command
This is to "fix" the error cause by the compilation on a different
jdk in azure.